syntax = 'proto3';

package appendEntry;
option go_package="/appendEntry";


service ServerService {
  rpc AppendEntry(AppendEntryMessage) returns (AppendEntryResponse);
  rpc RequestVote(RequestVoteMessage) returns (RequestVoteResponse);
}

message AppendEntryMessage {
  int64 term = 1;
  string leaderAddress = 2;
  int64 prevLogIndex = 3;
  int64 prevLogTerm = 4;
  //TODO tole preglej
  repeated LogEntry entries = 5;
  int64 leaderCommit = 6;
}

message LogEntry {
  int64 term = 1;
  int64 index = 2;
  string value = 3;
}

message AppendEntryResponse {
  int64 term = 1;
  bool success = 2;
}

message RequestVoteMessage {
  int64 term = 1;
  int64 lastLogIndex = 2;
  int64 lastLogTerm = 3;
}

message RequestVoteResponse {
  int64 term = 1;
  bool voteGranted = 2;
}